--- a/myworld.html
+++ b/myworld.html
@@ -16,5 +16,8 @@
 		<input type="password" name="password" placeholder="Enter the password"><br>
 		<input type="submit" name="submit" placeholder="Submit">
 	</form>
+	<footer>
+		<p>I am the footer</p>
+	</footer>
 </body>
 </html>
